IEP-1297 Consolidate information about the target and board in one place (#1027)
* feat: revamp the launch target editor page

* feat: refactoring code before providing new default values in target

* feat: introducing gdb_client_executable dynamic variable

* feat: added info message with an icon and text buttons with reveal button

* feat: moved custom swt to the separate module, updated launch config

* feat: updated custom swt plugin.xml
* fix: fixed fefault_argument_prefix

* fix: fixing notification that target has been changed

* feat: introducing serial_port dynamic variable

* fix: fixing jSerialComm exception during init page